k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris-app
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tetris-app
  template:
    metadata:
      labels:
        app: tetris-app
    spec:
      containers:
      - name: tetris-app
        image: 656751414067.dkr.ecr.ap-south-1.amazonaws.com/tetris-repo:98db36b44f4d5a37f398d7f9fadb34952ed93273
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 64Mi
          limits:
            cpu: 300m
            memory: 128Mi
