k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris-service
  namespace: development
spec:
  type: ClusterIP
  selector:
    app: tetris-app
  ports:
  - port: 80
    targetPort: 80
